[package]
name = "rust-zkp-chaum-pedersen"
version = "0.1.0"
edition = "2021"                    

[dependencies]
# Core dependencies
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
hex = "0.4.3"

# gRPC dependencies 
tonic = "0.11"                      
prost = "0.12"                     
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Build dependencies (only here, not in [dependencies])
[build-dependencies]
tonic-build = "0.11"               